--- a/jenkinsfile
+++ b/jenkinsfile
@@ -10,36 +10,15 @@ node {
  
 // dir(project_path) {
 
-	stage('Download package from JFrog') {
-            def server= Artifactory.server 'Artifactory'
-            def downloadSpec = """{
-            "files": [
-            {
-                "pattern": "capstoneproject/capstoneproject-0.0.1-SNAPSHOT.war",
-                "target": "./capstoneproject.war"
-            }
-            ]
-            }"""
-        server.download(downloadSpec)
-    }
-    
-
-
 	stage('AWS - Production Server Provisioning'){
 	   sh label: 'terraform', script: '/bin/terraform  init'
 	   sh label: 'terraform', script: '/bin/terraform  apply -input=false -auto-approve'
 	   }
 	   
-	  // stage('Downstream Build -- Ansible Deployment'){
-		 //	build 'ansible-pipe'
-		//}
-		
-	    stage('Deployment into production'){
- 	 sh label: 'terraform', script: 'ansible-playbook -i /root/.jenkins/workspace/terra-pipe/inventory -u ubuntu --key /root/.ssh/ramya.pem ./web-playbook.yaml'
-     } 
-	
-		
-  
+	   stage('Downstream Build -- Ansible Deployment'){
+		 	build 'ansible-pipe'
+		}
+
    
 //}	-----------dir end---------  
 
